Update manifest link in 404 page to correct path

--- a/src/subosity-app/public/404.html
+++ b/src/subosity-app/public/404.html
@@ -17,7 +17,7 @@
   <link rel="shortcut icon" href="https://subosity.com/favicon.ico" onerror="this.href='/favicon.ico'" />
   <link rel="apple-touch-icon" sizes="180x180" href="https://subosity.com/apple-touch-icon.png" onerror="this.href='/apple-touch-icon.png'" />
   <meta name="apple-mobile-web-app-title" content="Subosity" />
-  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="manifest" href="/manifest.json" />
   
   <script type="text/javascript">
     var segmentCount = 0;
