--- a/src/subosity-app/public/404.html
+++ b/src/subosity-app/public/404.html
@@ -9,21 +9,15 @@
 
     <script type="text/javascript">
       var l = window.location;
+
+      // If we're already on the physical 404 page, show a raw error for debugging.
       if (l.pathname.indexOf("404.html") > -1) {
         document.title = "404 Not Found";
         document.body.innerHTML = "404 Not Found";
       } else {
-        var segmentCount = 0;
-        l.replace(
-          l.protocol +
-            "//" +
-            l.hostname +
-            (l.port ? ":" + l.port : "") +
-            "/" +
-            l.pathname.slice(1).split("/").slice(segmentCount).join("/") +
-            (l.search ? "&q=" + l.search.slice(1) : "") +
-            l.hash
-        );
+        // Redirect to the root, passing the originally requested path as a query parameter, e.g. ?p=/rgwergwerg
+        var target = l.origin + "/?p=" + encodeURIComponent(l.pathname + l.search + l.hash);
+        l.replace(target);
       }
     </script>
   </head>
